<resources>
    <string name="app_name">Dynamic\nCrawler</string>
    <string name="app_version" translatable="false">ver.β (beta)</string>
    <string name="nav_title" translatable="false">DynamicCrawler</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Setting</string>

    <string name="menu_codes">CodeList</string>
    <string name="menu_share">--Unimplemented--</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_help">Help</string>
    <string name="str_delete">Delete</string>
    <string name="str_add">Add</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_deleted">Deleted</string>
    <string name="str_create_new_code">Create new code</string>
    <string name="str_code_name">Code Name</string>
    <string name="str_create">Create</string>
    <string name="str_delete_warn_msg">You cannot recover this code after code deleting.\\nDo you want to delete?</string>
    <string name="str_create_code_hint">Please enter the code name</string>
    <string name="str_error_occured">Error occurred :(</string>
    <string name="str_saved">Saved</string>
    <string name="str_too_fast">Too fast\\nPlease try again later</string>
    <string name="str_failed_to_load">Failed to load</string>
    <string name="set_cat_general">General</string>
    <string name="set_interpreting_interval">Interpreting Interval</string>
    <string name="set_interpreting_interval_summary">Set the interval between commands.(milli sec) Smaller interval enhances speed, but it requires more resource.</string>
    <string name="str_deprecated_fileIO">Getting absolute directory does not support upper Android Q and later versions because of security policy.</string>
    <string name="set_html_parse_timeout">HTML Parsing Timeout</string>
    <string name="str_info">Info</string>
    <string name="set_goto_dev_youtube">Go to Dev\'s YouTube Channel</string>
    <string name="set_goto_dev_blog">Go to Dev\'s Blog</string>
    <string name="set_patch_note">Patch Note</string>
    <string name="ser_html_parse_timeout_summary">Set timeout of Api.getHtml().(sec)</string>
    <string name="help_basic_guide">Basic Guide</string>
    <string name="help_working_principle">Working Principle</string>
    <string name="help_ex_connect_to_google">Ex - Connect to GOOGLE</string>
    <string name="env_language_code">en</string>
    <string name="arr_sys_lang">System Language</string>
    <string name="str_ui" translatable="false">UI</string>
    <string name="set_lang">Language</string>
    <string name="set_lang_summary">Set default language of UI</string>
    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
</resources>