<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_codes"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_codes" />
        <item
            android:id="@+id/nav_share"
            android:enabled="false"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_setting"
            android:enabled="true"
            android:icon="@drawable/setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />
    </group>
</menu>