<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_codes">

    <fragment
        android:id="@+id/nav_codes"
        android:name="com.foresthouse.dynamiccrawler.ui.nav_fragment.codelist.CodeListFragment"
        android:label="@string/menu_codes"
        tools:layout="@layout/fragment_codes" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.foresthouse.dynamiccrawler.ui.nav_fragment.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.foresthouse.dynamiccrawler.ui.nav_fragment.setting.SettingFragment"
        android:label="@string/menu_setting" />

    <fragment
        android:id="@id/nav_help"
        android:name="com.foresthouse.dynamiccrawler.ui.nav_fragment.help.HelpFragment"
        android:label="@string/menu_help" />
</navigation>